--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    // "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": true,
     "python.formatting.provider": "autopep8"
 }
